cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-invalid-offsetof")
project(LSDCloudBase)
find_package(PCL 1.3 REQUIRED COMPONENTS)
include_directories(${PCL_INCLUDE_DIRS} /home/s1143956/scratch/Analysis/LSDTopotools/ /home/s1143956/scratch/Analysis/LSDTopotools/TNT/)
link_directories(${PCL_LIBRARY_DIRS} /home/s1143956/scratch/Analysis/LSDTopotools/)
add_definitions(${PCL_DEFINITIONS})
add_executable(CloudBaseTest.out CloudBaseTest.cpp ../LSDRaster.cpp ../LSDIndexRaster.cpp ../LSDFlowInfo.cpp ../LSDStatsTools.cpp ../LSDCloudBase.cpp)
target_link_libraries(CloudBaseTest.out ${PCL_LIBRARIES} las)
