cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-invalid-offsetof")
project(LongProfileSwath)
find_package(PCL 1.3 REQUIRED COMPONENTS)
include_directories(${PCL_INCLUDE_DIRS} ../../ ../../TNT/)
link_directories(${PCL_LIBRARY_DIRS} ../../)
add_definitions(${PCL_DEFINITIONS})
add_executable(long_profile_swath_erosion.exe ../longitudinal_channel_swath_erosion_profile.cpp ../../LSDRaster.cpp ../../LSDChannel.cpp ../../LSDIndexRaster.cpp ../../LSDJunctionNetwork.cpp ../../LSDFlowInfo.cpp ../../LSDIndexChannelTree.cpp ../../LSDMostLikelyPartitionsFinder.cpp ../../LSDIndexChannel.cpp  ../../LSDStatsTools.cpp ../../LSDCloudBase.cpp ../../LSDSwathProfile.cpp ../../LSDShapeTools.cpp)
target_link_libraries(long_profile_swath_erosion.exe ${PCL_LIBRARIES} las)
